src/chrome/komodo/skin/toolbar.p.css
/* ***** BEGIN LICENSE BLOCK *****
 * Version: MPL 1.1/GPL 2.0/LGPL 2.1
 * 
 * The contents of this file are subject to the Mozilla Public License
 * Version 1.1 (the "License"); you may not use this file except in
 * compliance with the License. You may obtain a copy of the License at
 * http://www.mozilla.org/MPL/
 * 
 * Software distributed under the License is distributed on an "AS IS"
 * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
 * License for the specific language governing rights and limitations
 * under the License.
 * 
 * The Original Code is Komodo code.
 * 
 * The Initial Developer of the Original Code is ActiveState Software Inc.
 * Portions created by ActiveState Software Inc are Copyright (C) 2000-2007
 * ActiveState Software Inc. All Rights Reserved.
 * 
 * Contributor(s):
 *   ActiveState Software Inc
 * 
 * Alternatively, the contents of this file may be used under the terms of
 * either the GNU General Public License Version 2 or later (the "GPL"), or
 * the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
 * in which case the provisions of the GPL or the LGPL are applicable instead
 * of those above. If you wish to allow use of your version of this file only
 * under the terms of either the GPL or the LGPL, and not to allow others to
 * use your version of this file under the terms of the MPL, indicate your
 * decision by deleting the provisions above and replace them with the notice
 * and other provisions required by the GPL or the LGPL. If you do not delete
 * the provisions above, a recipient may use your version of this file under
 * the terms of any one of the MPL, the GPL or the LGPL.
 * 
 * ***** END LICENSE BLOCK ***** */

 
.toolbox-top {
    border: none;
    margin: 0px;
    margin-bottom: 1px;
    padding: 0px;
}

/* fixup the hight of toolbar menu buttons */
hbox > toolbar > toolbarbutton[type="menu-button"] {
  padding-top: 0px;
  padding-bottom: 0px;
}

toolbar {
    border-right: 1px outset ThreeDHighlight;
/* #if PLATFORM != "darwin" */
    border-left: 1px outset ThreeDHighlight;
/* #endif */
}
  
toolbarbutton {
    -moz-box-orient: vertical;
}

.toolbarbutton-text[buttonstyle="pictures"],
.toolbarbutton-icon[buttonstyle="text"] {
    display: none;
}

/* Bug 45096: These are evil. It is the reason why, for example, rxx.xul puts
 * bogus spaces around toolbarbutton labels to get some spacing. This should be
 * removed once the impact on other bits is understood. */
.toolbarbutton-text {
    margin: 0px;
    padding: 0px;
}
.toolbarbutton-icon {
    -moz-margin-end: 0px;
}

.toolbar-box {
    padding: 2px 4px;
}

#buttonBrowserPreview
{
  list-style-image : url("chrome://komodo/skin/images/preview_in_browser.png");
}

#buttonBrowserPreview:hover
{
  list-style-image : url("chrome://komodo/skin/images/preview_in_browser_hover.png");
}
#buttonBrowserPreview[disabled="true"],
#buttonBrowserPreview[disabled="true"]:hover,
#buttonBrowserPreview[disabled="true"]:hover:active
{
  list-style-image : url("chrome://komodo/skin/images/preview_in_browser_disable.png");
}

.rx-icon {
  list-style-image : url("chrome://komodo/skin/images/rx.png");
}
.rx-icon:hover {
  list-style-image : url("chrome://komodo/skin/images/rx_hover.png");
}
.rx-icon[disabled="true"],
.rx-icon[disabled="true"]:hover,
.rx-icon[disabled="true"]:hover:active {
  list-style-image : url("chrome://komodo/skin/images/rx_disable.png");
}

#objectBrowser
{
  list-style-image : url("chrome://komodo/skin/images/cb_objectbrowser.png");
}

#objectBrowser:hover
{
  list-style-image : url("chrome://komodo/skin/images/cb_objectbrowser_hover.png");
}

#buttondbgRestart
{
  list-style-image : url("chrome://komodo/skin/images/debug_restart.png");
}

#buttondbgRestart[disabled="true"],
#buttondbgRestart[disabled="true"]:hover,
#buttondbgRestart[disabled="true"]:hover:active
{
  list-style-image : url("chrome://komodo/skin/images/debug_restart_disable.png");
}

#buttondbgRestart:hover
{
  list-style-image : url("chrome://komodo/skin/images/debug_restart_hover.png");
}

#bufferCloseButton
{
  list-style-image : url("chrome://komodo/skin/images/small-x.png");
}

#bufferCloseButton[disabled="true"],
#bufferCloseButton[disabled="true"]:hover,
#bufferCloseButton[disabled="true"]:hover:active
{
  list-style-image : url("chrome://komodo/skin/images/small-x_disable.png");
}

#bufferCloseButton:hover
{
  list-style-image : url("chrome://komodo/skin/images/small-x_hover.png");
}

#newButton
{
  list-style-image : url("chrome://komodo/skin/images/newText.png");
}

#newButton[disabled="true"],
#newButton[disabled="true"]:hover,
#newButton[disabled="true"]:hover:active
{
  list-style-image : url("chrome://komodo/skin/images/newText_disabled.png");
}

#newButton:hover
{
  list-style-image : url("chrome://komodo/skin/images/newText_hover.png");
}

/* the newProjectButton is never disabled, so don't bother for now */

.save-all-buffers-icon
{
  list-style-image : url("chrome://komodo/skin/images/saveAll.png");
}

.save-all-buffers-icon[disabled="true"],
.save-all-buffers-icon[disabled="true"]:hover,
.save-all-buffers-icon[disabled="true"]:hover:active
{
  list-style-image : url("chrome://komodo/skin/images/saveAll_disabled.png");
}

.save-all-buffers-icon:hover
{
  list-style-image : url("chrome://komodo/skin/images/saveAll_hover.png");
}

.cut-button
{
  list-style-image : url("chrome://komodo/skin/images/cut.png");
}

.cut-button[disabled="true"],
.cut-button[disabled="true"]:hover,
.cut-button[disabled="true"]:hover:active
{
  list-style-image : url("chrome://komodo/skin/images/cut_disabled.png");
}

.cut-button:hover
{
  list-style-image : url("chrome://komodo/skin/images/cut_hover.png");
}

.copy-button
{
  list-style-image : url("chrome://komodo/skin/images/copy.png");
}

.copy-button[disabled="true"],
.copy-button[disabled="true"]:hover,
.copy-button[disabled="true"]:hover:active
{
  list-style-image : url("chrome://komodo/skin/images/copy_disabled.png");
}
/* ... */

